fix: Mouse tab spacing to be compatible with Bootstrap 4

--- a/packages/uhk-web/src/app/components/popover/tab/mouse/mouse-tab.component.scss
+++ b/packages/uhk-web/src/app/components/popover/tab/mouse/mouse-tab.component.scss
@@ -1,5 +1,3 @@
-@import '../../../../../styles/variables';
-
 :host {
     display: flex;
 
@@ -25,8 +23,10 @@
 
                 &.active {
                     a {
-                        &.selected {
-                            font-style: normal;
+                        position: relative;
+
+                        &.active {
+                            background-color: var(--color-icon-hover);
                         }
 
                         &:after {
@@ -36,10 +36,10 @@
                             width: 0;
                             height: 0;
                             top: 0;
-                            right: -4rem;
-                            border-color: transparent transparent transparent $icon-hover;
+                            right: -37px;
+                            border-color: transparent transparent transparent var(--color-icon-hover);
                             border-style: solid;
-                            border-width: 2rem;
+                            border-width: 1.16rem;
                         }
                     }
                 }
